--- a/formulário de cadastro.html
+++ b/formulário de cadastro.html
@@ -11,15 +11,16 @@
         <label for="User">Usuário: </label>
         <input id="User" type="text" />
         <br />
-        <label id="email">Email: </label>
-        <input id="Email" type="email" />
+        <label for="email">Email: </label>
+        <input for="Email" type="email" />
         <br />
         <label id="Senha">Senha: </label>
         <input id="Senha" type="password" />
+        <button type="submit">
+            Cadastrar
+        </button>
     </form>
-    <button type="submit">
-        Cadastrar
-    </button>
+    
     
 </body>
 </html>
