--- a/formulário de cadastro.html
+++ b/formulário de cadastro.html
@@ -12,9 +12,9 @@
         <input id="User" type="text" />
         <br />
         <label for="email">Email: </label>
-        <input for="Email" type="email" />
+        <input id="Email" type="email" />
         <br />
-        <label id="Senha">Senha: </label>
+        <label for="Senha">Senha: </label>
         <input id="Senha" type="password" />
         <br />
         <button type="submit">
